# kordx

./: .gitattributes  .gitignore  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  README.md  build.gradle.kts  gradle.properties  package-lock.json  package.json  settings.gradle.kts
.github/workflows/: ci.yml  release.yml
app/: build.gradle.kts  detekt-baseline.xml  keystore.properties.example  lint.xml  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/i18n/: de.json  en.json  es.json  fa.json  fi.json  fr.json  hi.json  it.json  ja.json  pl.json  pt.json  ro.json  ru.json  te.json  tr.json  uk.json  vi.json  zh-Hans.json
app/src/main/java/com/android/rockages/kordx/: ActivityIgnition.kt  ErrorActivity.kt  KordX.kt  KordXApplication.kt  MainActivity.kt
app/src/main/java/com/android/rockages/kordx/services/: AppMeta.kt  Permissions.kt  Settings.kt
app/src/main/java/com/android/rockages/kordx/services/groove/: Groove.kt  GrooveModelExtensions.kt  MediaExposer.kt  PlaylistParser.kt  SongParser.kt
app/src/main/java/com/android/rockages/kordx/services/groove/repositories/: AlbumArtistRepository.kt  (+8 more)
app/src/main/java/com/android/rockages/kordx/services/i18n/: CommonTranslation.kt  Translation.g.kt  Translation.kt  Translations.g.kt  Translations.kt  Translator.kt
app/src/main/java/com/android/rockages/kordx/services/radio/: KordXMediaLibraryService.kt  KordXMediaSessionConstants.kt  KordXSearch.kt  Media3ItemFactory.kt  Radio.kt  RadioAdapterTarget.kt  RadioArtworkCacher.kt  RadioEffects.kt  RadioFocus.kt  RadioForwardingPlayer.kt  RadioNativeReceiver.kt  RadioNotification.kt  RadioNotificationManager.kt  RadioNotificationService.kt  RadioObservatory.kt  RadioPlayer.kt  RadioQueue.kt  RadioSession.kt  RadioSessionState.kt  RadioShorty.kt
app/src/main/java/com/android/rockages/kordx/ui/components/: AddToPlaylistDialog.kt  AlbumArtistGrid.kt  AlbumArtistTile.kt  AlbumGrid.kt  AlbumRow.kt  AlbumTile.kt  ArtistGrid.kt  ArtistTile.kt  ConfirmationDialog.kt  ContentDrawScopeScrollBar.kt  ErrorComp.kt  GenericGrooveBanner.kt  GenericGrooveCard.kt  GenericSongListDropdown.kt  GenreGrid.kt  IconButtonPlaceholder.kt  IconTextBody.kt  InformationDialog.kt  IntroductoryDialog.kt  KeepScreenAwake.kt  LazyColumnScrollBar.kt  LazyGridScrollBar.kt  LoaderScaffold.kt  LongPressCopyableText.kt  LyricsText.kt  MediaSortBar.kt  MediaSortBarScaffold.kt  NewPlaylistDialog.kt  NowPlayingBottomBar.kt  PlaylistGrid.kt  PlaylistInformationDialog.kt  PlaylistManageSongsDialog.kt  PlaylistTile.kt  RenamePlaylistDialog.kt  ResponsiveGrid.kt  ScaffoldDialog.kt  Slider.kt  Snackbar.kt  SongCard.kt  SongExplorerList.kt  (+8 more)
app/src/main/java/com/android/rockages/kordx/ui/helpers/: Assets.kt  Context.kt  SimpleFileSystem.kt  Transitions.kt  UserInterface.kt
app/src/main/java/com/android/rockages/kordx/ui/theme/: Color.kt  ColorScheme.kt  Theme.kt  Typography.kt
app/src/main/java/com/android/rockages/kordx/ui/view/: Album.kt  AlbumArtist.kt  Artist.kt  Base.kt  Genre.kt  Home.kt  Lyrics.kt  NowPlaying.kt  Playlist.kt  Queue.kt  Search.kt  Settings.kt
app/src/main/res/drawable/: ic_favorite_border.xml  ic_favorite_filled.xml  ic_launcher_foreground.xml  ic_launcher_foreground_light.xml  ic_launcher_monochrome.xml  ic_repeat.xml  ic_repeat_active.xml  ic_repeat_one.xml  ic_search.xml  ic_shuffle.xml  ic_shuffle_active.xml
app/src/main/res/values/: splash.xml  strings.xml  themes.xml
app/src/test/java/com/android/rockages/kordx/: ArtistNormalizationTest.kt  BrandIdentityTest.kt  CR3AutoPlaybackWiringTest.kt  DebugReceiversRegistrationTest.kt  I18nProguardRulesTest.kt  IconRefinementTest.kt  MainActivityMediaSearchForwardingTest.kt  MetaphonyProguardRulesTest.kt  PackageConsistencyTest.kt  RadioNativeReceiverRegistrationTest.kt  ThemeResourceTest.kt  UpdateRemovalTest.kt
app/src/test/java/com/android/rockages/kordx/services/groove/: RecentPlaysCacheTest.kt  SamplingInfoStringTest.kt
app/src/test/java/com/android/rockages/kordx/services/i18n/: TranslationLoaderTest.kt
app/src/test/java/com/android/rockages/kordx/services/radio/: CustomBrowseActionTest.kt  KordXMediaLibraryServiceTest.kt  Media3ItemFactoryTest.kt  RadioForwardingPlayerTest.kt  RadioPlayRecursionTest.kt  RadioQueueLoopShufflePersistenceTest.kt  RadioQueueRemoveTest.kt  RadioSessionStateTest.kt
app/src/test/java/com/android/rockages/kordx/ui/theme/: ColorSchemeVisibilityTest.kt  PoppinsFontAliasTest.kt
config/detekt/: baseline.xml  detekt.yml
core/: build.gradle.kts  detekt-baseline.xml
core/src/main/java/com/android/rockages/kordx/core/groove/: Album.kt  AlbumArtist.kt  Artist.kt  Genre.kt  Playlist.kt  RecentPlay.kt  Song.kt  SongFavorite.kt
core/src/main/java/com/android/rockages/kordx/core/utils/: ActivityUtils.kt  DocumentFileX.kt  DurationUtils.kt  Eventer.kt  Float.kt  Fuzzy.kt  Http.kt  ImagePreserver.kt  KeyGenerator.kt  List.kt  Logger.kt  RangeUtils.kt  RoomConvertors.kt  Run.kt  Set.kt  SimpleFileSystem.kt  SimplePath.kt  StringListUtils.kt  StringUtils.kt  TimedContent.kt
docs/: RELEASING.md
gradle/: libs.versions.toml
i18n/: de.toml  en.toml  es.toml  fa.toml  fi.toml  fr.toml  hi.toml  it.toml  ja.toml  pl.toml  pt.toml  ro.toml  ru.toml  te.toml  tr.toml  uk.toml  vi.toml  zh-Hans.toml
infra/: build.gradle.kts  detekt-baseline.xml
infra/room-schemas/com.android.rockages.kordx.infra.database.CacheDatabase/: 3.json
infra/room-schemas/com.android.rockages.kordx.infra.database.PersistentDatabase/: 2.json
infra/src/main/java/com/android/rockages/kordx/infra/database/: CacheDatabase.kt  Database.kt  PersistentDatabase.kt
metaphony/: build.gradle.kts  consumer-rules.pro  detekt-baseline.xml
metaphony/src/androidTest/java/com/android/rockages/kordx/metaphony/: AudioMetadataParserTest.kt
metaphony/src/main/cpp/: AudioMetadataParser.cpp  CMakeLists.txt  TagLibHelper.h
metaphony/src/main/java/com/android/rockages/kordx/metaphony/: AudioMetadata.kt  AudioMetadataParser.kt
metaphony/src/test/java/com/android/rockages/kordx/metaphony/: AudioMetadataParserTest.kt
(+51 files in other folders)
